Share: social buttons added. We need to check facebook one

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1,6 +1,7 @@
 /* Layout */
 $max-width: 1400px;
 $modal-max-width: 800px;
+$modal-tiny-max-width: 550px;
 
 /* Font */
 $base-font-family: "Montserrat", Arial, sans-serif;
