added first version of homepage

--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -42,6 +42,13 @@
     }
   }
 
+  .l-app-claim {
+    position: absolute;
+    top: 37%;
+    left: $box-space;
+    transform: translate(0, -50%);
+  }
+
   .l-app-navbar {
     position: relative;
     margin-top: -52px;
@@ -61,6 +68,5 @@
   }
 
   .l-app-bottombar {
-
   }
 }
