Country data call prepared

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -64,6 +64,19 @@
 </section>
 
 <div class="l-grid" id="content">
+  <div class="c-data wrapper">
+    <div class="row collapse">
+      <div class="column small-12 medium-4">
+        adsf
+      </div>
+      <div class="column small-12 medium-4">
+        dfghds
+      </div>
+      <div class="column small-12 medium-4">
+        shg
+      </div>
+    </div>
+  </div>
   <% if @current_type == 'events' %>
     <%= render 'events/list', items: @items, more: @more %>
   <% elsif @current_type == 'projects' %>
