Download: first steps

--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -25,6 +25,7 @@ $dropdown-width: 182px;
 
     //TODO: Set this by JS
     top: 52px;
+    right: 0;
 
     .dropdown-item {
       padding: ($button-y-padding / 2) $button-x-padding;
