--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,4 +1,13 @@
 <ul class="c-toolbar">
+  <li id="download"class="toolbar-item -sortby">
+    <button class="c-btn js-toolbar-action" data-action="download">
+      <svg class="c-icon -small -inverse">
+        <use xlink:href="#icon-download"></use>
+      </svg>
+      Download
+    </button>
+  </li>
+
   <li id="sortby"class="toolbar-item -sortby"></li>
 
   <li class="toolbar-item -highlighted">
