added favicon and organization in homepage

--- a/app/assets/javascripts/templates/share.hbs
+++ b/app/assets/javascripts/templates/share.hbs
@@ -29,12 +29,12 @@
             </svg>
             Facebook
           </a>
-          <a href="https://www.linkedin.com/shareArticle?mini=true&url={{this.urlEncoded}}&title=Global Cancer Project Map&summary=&source=" target="_blank" class="c-btn -primary -with-icon -linkedin js-btn-share-social" type="button" name="button">
+          <!--<a href="https://www.linkedin.com/shareArticle?mini=true&url={{this.urlEncoded}}&title=Global Cancer Project Map&summary=&source=" target="_blank" class="c-btn -primary -with-icon -linkedin js-btn-share-social" type="button" name="button">
             <svg class="c-icon -small -inverse">
               <use xlink:href="#icon-linkedin"></use>
             </svg>
             Linkedin
-          </a>
+          </a>-->
         </div>
       </div>
     </div>
