--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<% title 'Welcome' %>
+
 <section class="l-app -main -full">
   <div class="l-app-map">
     <div id="map" class="c-map"></div>
@@ -24,4 +26,5 @@
 <section class="l-grid" id="content">
   <%= render 'projects/list', items: @projects, more: false %>
   <%= render 'events/list', items: @events, more: false %>
+  <%= render 'organizations/list', items: @organizations, more: false %>
 </section>
