Content style fit

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -5,7 +5,8 @@ $modal-tiny-max-width: 550px;
 
 /* Font */
 $base-font-family: "Montserrat", Arial, sans-serif;
-$base-font-family-light: "Montserrat-light";
+$base-font-family-light: "Montserrat-light", Arial, sans-serif;
+$base-font-family-normal: "Montserrat-normal", Arial, sans-serif;
 $base-font-size: 14px;
 $base-font-weight: lighter;
 $base-line-height: 1.6;
