--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -5,6 +5,7 @@
 
   .list-item {
     display: block;
-    margin-bottom: $inline-space;
+    font-family: $base-font-family-light;
+    margin-bottom: 2px;
   }
 }
