--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: "Montserrat-normal";
+  font-family: "Montserrat";
   src: asset-url("montserrat-regular-webfont.woff2") format("woff2"),
     asset-url("montserrat-regular-webfont.woff") format("woff");
   font-weight: normal;
