--- a/app/assets/stylesheets/components/_tag.scss
+++ b/app/assets/stylesheets/components/_tag.scss
@@ -1,5 +1,12 @@
 
 .c-tag {
-  padding: 5px 10px;
+  padding: 2px 8px;
   background-color: $base-bg-color;
+  font-weight: normal;
+
+  //Margin
+  &.-mg {
+    line-height: 25px;
+    margin-right: 3px;
+  }
 }
