--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -63,6 +63,10 @@
         </div>
       </div>
 
+      <h3 class="c-title">Funding Source</h3>
+      <p>Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.</p>
+      
+
       <div class="row">
         <div class="column small-12">
           <div class="c-button-container -j-center -a-center">
