--- a/app/assets/stylesheets/components/_legend.scss
+++ b/app/assets/stylesheets/components/_legend.scss
@@ -4,12 +4,14 @@
   top: $base-space;
   right: $base-space;
   padding: $button-y-padding $button-x-padding;
-  color: $base-font-color;
-  background-color: $body-bg-color;
-  max-width: 300px;
+  color: $inverse-font-color;
+  background-color: rgba($secondary-color, 0.7);
 
   > ul {
     border-top: 1px solid $border-color-1;
+    margin: 0;
+    padding: 0;
+
     &:first-child {
       border-top: none;
     }
@@ -21,42 +23,52 @@
 
   &.-main {
     top: 35px + $base-space;
-    padding: 0;
     box-shadow: $box-shadow;
+    background-color: $body-bg-color;
+    color: $base-font-color;
+    max-width: 300px;
+    padding: 0;
+
+    .marker-legend {
+      display: block;
+      padding: ($button-x-padding/2) $button-x-padding;
+      > li {
+        margin: 0;
+        padding: ($base-space/2) 0;
+      }
+    }
   }
 
   .legend-label {
     text-transform: uppercase;
     font-size: $small-font-size;
     font-weight: bold;
+    white-space: nowrap;
   }
 
   // MARKER LEGEND
   .marker-legend {
-    display: block;
-    padding: ($button-x-padding/2) $button-x-padding;
+    display: flex;
     margin: 0;
 
     > li {
       display: flex;
       align-items: center;
       letter-spacing: 1px;
-      margin-top: 0;
-      margin-left: $base-space;
 
       line-height: 1;
 
       justify-content: flex-start;
-      margin: 0;
-      padding: ($base-space/2) 0;
+      margin: 0 $inline-space 0 0;
+      padding: 0;
 
       &:first-child {
         margin-top: 0;
-        margin-left: 0;
       }
 
       &:last-child {
         margin-bottom: 0;
+        margin-right: 0;
       }
     }
   }
@@ -149,6 +161,12 @@
     &.-collaborators {
       .circle-icon {
         background-color: $secondary-color;
+      }
+    }
+
+    &.-points {
+      .circle-icon {
+        background-color: $body-bg-color;
       }
     }
   }
