--- a/app/views/shared/_legend.html.erb
+++ b/app/views/shared/_legend.html.erb
@@ -2,7 +2,8 @@
   <ul class="marker-legend">
     <li>
       <div class="legend-icon -events">
-        <svg class="marker-icon"><use xlink:href="#icon-marker"></use></svg>
+        <div class="circle-icon"></div>
+        <!-- <svg class="marker-icon"><use xlink:href="#icon-marker"></use></svg> -->
       </div>
       <div class="legend-label"><%= t 'project_leads' %></div>
     </li>
