--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -12,6 +12,7 @@
   }
 
   > li {
+    position: relative;
     display: flex;
     align-items: center;
     margin-right: $base-space;
@@ -47,7 +48,7 @@
     justify-content: flex-end;
 
     li {
-       > a {
+       > a, > button {
          display: block;
          position: relative;
          line-height: 24px;
