--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,10 @@
           <ul>
             <%= render "shared/nav" %>
             <% if user_signed_in? %>
+              <li class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
+                <button>O</button>
+                <%= render 'shared/user_menu' %>
+              </li>
             <% else %>
               <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
                 <%= link_to (t 'login'), user_session_path %></a>
