--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,6 +25,6 @@
 
 <section class="l-grid" id="content">
   <%= render 'projects/list', items: @projects, more: false %>
-  <%= render 'events/list', items: @events, more: false %>
-  <%= render 'organizations/list', items: @organizations, more: false %>
+  <%= render 'events/list', items: @events, more: false, hightligh_first: true %>
+  <%= render 'organizations/list', items: @organizations, more: false, hightligh_first: true %>
 </section>
