--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -2,7 +2,7 @@
   <div class="row collapse">
     <% items.each do |p| %>
       <div class="column small-12 medium-4">
-        <div class="c-card">
+        <div class="c-card -projects">
           <h3 class="-underlined">
             <a href="/investigators/<%= p.project_leads.first.try(:id) %>">
               <%= p.project_leads.first.try(:name) %>
