--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,6 +12,7 @@
     display: inline-block;
     color: $base-font-color;
   }
+
   &.-person {
     h2, h3 {
       text-align: center;
@@ -23,6 +24,40 @@
       overflow: hidden;
       text-overflow: ellipsis;
       text-transform: none;
+    }
+  }
+
+  &.-projects {
+    h3.-underlined:after {
+      border-bottom-color: $primary-color;
+    }
+  }
+
+  &.-events {
+    h3.-underlined:after {
+      border-bottom-color: $alternative-color;
+    }
+  }
+
+  &.-inverse {
+    background-color: $secondary-color;
+    color: $inverse-font-color;
+
+    h2, h3,
+    h2 > a, h3 > a {
+      color: $inverse-font-color;
+    }
+
+    h3.-underlined:after {
+      border-bottom-color: $inverse-font-color;
+    }
+
+    &.-events {
+      background-color: $alternative-color;
+    }
+
+    &.-projects {
+      background-color: $primary-color;
     }
   }
 }
