--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -57,6 +57,7 @@
       <div class="column small-12 align-center">
         <button type="button" class="c-btn -inverse js-filter-form-cancel">Cancel</button>
         <button type="submit" class="c-btn -primary js-filter-form-submit">Apply</button>
+        <button type="button" class="c-btn -primary js-filter-form-reset">Reset</button>
       </div>
     </div>
   </div>
