--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -65,6 +65,8 @@
     color: $inverse-font-color;
 
     background-image: linear-gradient(to top, #68299b, rgba(103, 40, 155, 0));
+
+    pointer-events: none;
   }
 
   .l-app-bottombar {
