--- a/app/views/organizations/_list.html.erb
+++ b/app/views/organizations/_list.html.erb
@@ -2,7 +2,7 @@
   <div class="row collapse">
     <% items.each_with_index do |o, index| %>
       <div class="column small-12 medium-4">
-        <div class="c-card <% if index == 0 && hightligh_first %>-inverse<% end %>">
+        <div class="c-card <% if index == 0 && defined?(hightligh_first) %>-inverse<% end %>">
           <h3 class="-underlined">
             Organization
           </h3>
