--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -55,7 +55,7 @@
   <div class="form-actions modal-buttons">
     <div class="row">
       <div class="column small-12 align-center">
-        <button type="button" class="c-btn -inverse js-filter-form-cancel">Cancel</button>
+        <button type="button" class="c-btn -primary -inverse js-filter-form-cancel">Cancel</button>
         <button type="submit" class="c-btn -primary js-filter-form-submit">Apply</button>
       </div>
     </div>
