--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -2,6 +2,8 @@
   @extend %reset-btn;
   padding: $button-y-padding $button-x-padding;
 
+  display: inline-block;
+
   font-size: $small-font-size;
   font-weight: bold;
   line-height: 1.2;
@@ -26,36 +28,53 @@
     padding: ($button-y-padding / 2) ($button-x-padding / 2);
   }
 
-  &.-round-icon {
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    margin: ($button-y-padding / 2) ($button-x-padding / 2);
-
+  &.-extra-thin {
+    padding: $button-y-padding 0;
   }
 
   &.-primary {
     color: $inverse-font-color;
     background-color: $primary-color;
+
+    &.-inverse {
+      color: $primary-color;
+      background-color: $inverse-font-color;
+      border: 1px solid $primary-color;
+    }
   }
 
-  &.-inverse {
-    color: $primary-color;
-    background-color: white;
-    border: 1px solid $primary-color;
+  &:hover {
+    box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.2);
   }
 
+  // Global
   &.-global {
     color: $inverse-font-color;
     background-color: $secondary-color;
+
+    &.-inverse {
+      background-color: $inverse-font-color;
+      color: $secondary-color;
+    }
   }
 
+  // Alternative
   &.-alternative {
     color: $inverse-font-color;
     background-color: $alternative-color;
+
+    &.-inverse {
+      color: $alternative-color;
+      background-color: $inverse-font-color;
+      border: 1px solid $alternative-color;
+    }
+  }
+
+  // Transparent
+  &.-transparent {
+    color: $inverse-font-color;
+    background-color: transparent;
+    border: 1px solid $inverse-font-color;
   }
 
   &.-with-icon {
@@ -85,6 +104,16 @@
     &:hover {
       background: darken(#007bb5, 5%);
     }
+  }
+
+  &.-round-icon {
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin: ($button-y-padding / 2) ($button-x-padding / 2);
   }
 
   .notification-bubble {
