--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -5,6 +5,7 @@
     <div id="map" class="c-map"></div>
   </div>
   <%= render "shared/legend" %>
+
   <div class="l-app-title">
     <div class="wrapper">
       <div class="row collapse">
@@ -24,6 +25,10 @@
           </table>
           <br/>
         </div>
+
+        <% if (current_user) %>
+          <%= render "shared/user_actions" %>
+        <% end %>
       </div>
     </div>
   </div>
