--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,5 @@
 </section>
 
 <section class="l-grid" id="content">
-  <%= render 'projects/list', items: @projects, more: false %>
-  <%= render 'events/list', items: @events, more: false, hightligh_first: true %>
-  <%= render 'organizations/list', items: @organizations, more: false, hightligh_first: true %>
+  <%= render 'home/list' %>
 </section>
