--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -46,6 +46,7 @@ $overlay-bg-color: rgba($black, .3);
 $border-color-1: #e5e5e5;
 
 $box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+$box-shadow-2: 0 7px 15px 0 rgba(0, 0, 0, 0.2);
 
 $base-space: 23px;
 $box-space: 60px;
