added basemap for inner pages

--- a/app/assets/javascripts/views/map_view.js.erb
+++ b/app/assets/javascripts/views/map_view.js.erb
@@ -6,6 +6,10 @@
     main: {
       url: '<%= ENV["BASEMAP_URL"] %>',
       options: {}
+    },
+    secondary: {
+      url: '<%= ENV["ALT_BASEMAP_URL"] %>',
+      options: {}
     }
   };
 
