Set user profile tabs

--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -60,7 +60,7 @@
     width: 100%;
     bottom: 0;
     left: 0;
-    padding: $box-space 0;
+    padding: ($box-space * 1.5) 0;
 
     color: $inverse-font-color;
 
