--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,12 +20,12 @@
 
             <div class="row">
               <div class="column small-12 medium-6">
-                <div>
-                  <span><%= user.position ?
-                    user.position : '' %></span>
-                  <span><%= user.position ?
-                    ' | ' + user.position : '' %></span>
-                </div>
+                <ul>
+                  <li><%= user.position ?
+                    user.position : '' %></li>
+                  <li><%= user.position ?
+                    user.position : '' %></li>
+                </ul>
               </div>
               <div class="column small-12 medium-6">
                 <span>
@@ -75,9 +75,13 @@
 </section>
 
 <div class="l-grid" id="content">
-  <% if @current_type == 'projects' %>
+  <% if @current_type === 'projects' %>
     <%= render 'projects/list', items: @items, more: @more %>
   <% #else @current_type %>
     <% #render 'investigators/list', items: @items, more: @more %>
+  <% elsif @current_type === 'posts' %>
+    <%= render 'posts/list', items: @items, more: @more %>
+  <% elsif @current_type === 'network' %>
+    <%= render 'investigators/list', items: @items, more: @more %>
   <% end %>
 </div>
