--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,12 +1,11 @@
 (function() {
 
   'use strict'
-  <% template = @current_type == 'people' ? "investigators/list" : "#{@current_type}/list" %>
+  <% template = @current_type == 'network' ? "investigators/list" : "#{@current_type}/list" %>
 
   var htmlContent = "<%= escape_javascript render(partial: template, locals: { items: @items, more: @more }) %>";
   var htmlCounters = "<%= escape_javascript render(partial: 'map/counters') %>"
 
   document.getElementById('content').innerHTML = htmlContent;
   document.getElementById('counters').innerHTML = htmlCounters;
-
 })();
