--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -9,8 +9,16 @@
   background-color: $primary-color;
   color: $inverse-font-color;
 
-  &.-big {
+  &.-medium {
     width: 120px;
     height: 120px;
+    font-size: $medium-font-size;
   }
+
+  &.-big {
+    width: 150px;
+    height: 150px;
+    font-size: $big-font-size;
+  }
+
 }
