--- a/app/views/cancer_types/index.html.erb
+++ b/app/views/cancer_types/index.html.erb
@@ -7,7 +7,7 @@
         <div class="form-row">
           <div id="search-input"></div>
         </div>
-        <button class="c-btn -global"><%= t 'search' %></button>
+        <button class="c-btn -secondary"><%= t 'search' %></button>
       </div>
     </div>
   </div>
