--- a/app/assets/javascripts/templates/countries_list.hbs
+++ b/app/assets/javascripts/templates/countries_list.hbs
@@ -4,7 +4,7 @@
       <div class="wrapper">
         <div class="row collapse">
           <div class="column small-12">
-            <h2 class="-underlined -global">{{region}}</h2>
+            <h2 class="-underlined">{{region}}</h2>
             <ul class="c-list row">
               {{#each countries as |country|}}
                 <li class="column small-6 medium-3">
