--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -1,7 +1,7 @@
 <div class="column small-4">
   <div id="">
     <ul class="c-btn-container">
-      <li><a href="/network/" class="c-btn -global -inverse">Follow</a></li>
+      <li><a href="/network/" class="c-btn -secondary -inverse">Follow</a></li>
     </ul>
     <ul class="c-btn-container">
       <li><a href="/network/<%= current_user.id %>/projects/new" class="c-btn -transparent -extra-thin">+ Project</a></li>
