--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="c-shared-links">
   <%- if controller_name != 'sessions' %>
     <li><%= link_to "Log in", new_session_path(resource_name) %></li>
   <% end -%>
