--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="l-content">
   <div class="wrapper">
     <div class="row">
-      <div class="column small-12 medium-6">
+      <div class="column small-12 medium-8 large-6">
 
         <h2>Resend unlock instructions</h2>
 
