adds event deatil legend

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -7,7 +7,7 @@
     <div id="map" class="c-map"></div>
   </div>
 
-  <%= render "shared/legend" %>
+  <%= render "shared/legend_people" %>
 
   <div class="l-app-title">
     <div class="wrapper">
