--- a/app/views/shared/_legend_projects.html.erb
+++ b/app/views/shared/_legend_projects.html.erb
@@ -1,7 +1,7 @@
 <div class="c-legend">
   <ul class="marker-legend">
     <li>
-      <div class="legend-icon -projects">
+      <div class="legend-icon -events">
         <div class="circle-icon"></div>
       </div>
       <div class="legend-label"><%= t 'projects' %></div>
