--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -9,6 +9,11 @@
   background-color: $primary-color;
   color: $inverse-font-color;
 
+  &.-small {
+    width: 38px;
+    height: 38px;
+  }
+
   &.-big {
     width: 120px;
     height: 120px;
