--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,7 +17,10 @@
         <div class="column small-8">
           <div class="c-summary-info row -collapse">
             <div class="column small-12 medium-4 align-middle">
-              <h3><%= @event.participants != nil ? @event.participants.split(',').length : nil%>
+              <div class="c-avatar -small">
+                <!-- svg -->
+              </div>
+              <h3><%= @event.participants != nil ? @event.participants.split(',').length : 0 %>
                 Participants</h3>
             </div>
           </div>
