--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -66,7 +66,8 @@
 
     background-image: linear-gradient(to top, #68299b, rgba(103, 40, 155, 0));
 
-    pointer-events: none;
+    // I need to click in the follow buttons
+    // pointer-events: none;
   }
 
   .l-app-bottombar {
