--- a/app/views/shared/_user_actions.html.erb
+++ b/app/views/shared/_user_actions.html.erb
@@ -1,7 +1,14 @@
 <div class="column small-4">
-  <div id="">
+  <div id="userActions">
     <ul class="c-btn-container">
-      <li><a href="/network/" class="c-btn -secondary -inverse">Follow</a></li>
+      <li>
+        <form method="POST" action="/follows/<%= @followed_resource %>/<%= @followed_id %>"
+          data-remote=true>
+          <button type="submit" class="c-btn -secondary -inverse">
+            <%= (@followed) ? 'Unfollow' : 'Follow' %>
+          </button>
+        </form>
+      </li>
     </ul>
     <ul class="c-btn-container">
       <li><a href="/network/<%= current_user.id %>/projects/new" class="c-btn -transparent -extra-thin">+ Project</a></li>
