new form first approx

--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -15,6 +15,9 @@
   {{#if min}}min="{{min}}"{{/if}}
   {{#if max}}max="{{max}}"{{/if}}
 />
+{{#if info}}
+  <span> {{info}}</span>
+{{/if}}
 {{#if required}}
   <p class="c-required">* Field required</p>
 {{/if}}
