--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -64,8 +64,12 @@
       </div>
 
       <h3 class="c-title">Funding Source</h3>
-      <p>Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.</p>
-      
+      <div class="row">
+        <div class="column small-12">
+          <p>Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.</p>
+          <div id="policy" class="c-select"></div>
+        </div>
+      </div>
 
       <div class="row">
         <div class="column small-12">
