--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Post</h1>
+<div class="l-content">
+  <div class="wrapper">
+    <div class="row">
+      <div class="column small-12 medium-8 large-6">
+        <h1>New Post</h1>
 
-<%= render 'form', post: @post %>
+        <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+        <% link_to 'Back', posts_path %>
+      </div>
+    </div>
+  </div>
+</div>
