--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,15 +1,16 @@
 <%= simple_form_for(@post) do |f| %>
   <%= f.error_notification %>
+    <div class="form-row">
+      <%= f.input :title %>
+    </div>
+    <div class="form-row">
+      <%= f.cktext_area :body %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.cktext_area :body %>
-    <%= f.input :user_id %>
-  </div>
+    <div class="form-row">
+      <%= f.button :submit, "Create Post", class: 'c-btn -primary' %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
 <% end %>
 
 <%= javascript_include_tag Ckeditor.cdn_url %>
